<resources>
    <string name="app_name">Déching</string>
    <string name="nom_app">Déching</string>

    <string name="MAPS_API_KEY">AIzaSyBXXc6qaSWh7PQE9pXkLeVfQv8mCJaXTnc</string>
    <string name="todo">TODO</string>
    <string name="logo_de_l_application">Logo de l\'application</string>
    <string name="coma">,\ </string>
    <string name="deuxPoints">:\ </string>
    <string name="returnLine">\n</string>

    // Map Layout
    <string name="butonSignaler">Signaler</string>


    <string name="dechetSize">Taille des déchets</string>
    <string name="dechetSizeSmall">Petit</string>
    <string name="dechetSizeMedium">Moyen</string>
    <string name="dechetSizeLarge">Grand</string>

    <string name="dechetDetails">Détails</string>
    <string name="dechetStings">ça pique</string>
    <string name="dechetBites">ça mord</string>
    <string name="dechetWet">ça mouille</string>
    <string name="dechetToxic">toxique</string>
    <string name="dechetOrganic">organique</string>
    <string name="dechetElectronic">électronique</string>

    <string name="dechetPosition">Position</string>
    <string name="dechetPhoto">Prendre une photo</string>
    <string name="dechetComment">Commentaire (500 car)</string>
    <string name="dechetComment2">Commentaire…</string>

    <string name="dechetPoint">Pointer</string>
    <string name="dechetValidate">Valider</string>

    // Map Activity
    <string name="dechetAdd">Déchet ajouté avec succès</string>
    <string name="dechetDelete">Déchet supprimé avec succès</string>
    <string name="dechetWarning">Vous venez de rentrer un déchet potentiellement dangereux pour vous ainsi que pour les autres. Nous allons donc le nettoyer par nous-mêmes.
        \nMerci de votre signalement.</string>

    <string name="delete">Supprimer</string>
    <string name="deleteOk">Oui</string>
    <string name="ok">Confirmation</string>
    <string name="msgConfirmation">Êtes-vous sûr de vouloir supprimer ce déchet ?</string>
    <string name="deleteNo">Non</string>
    <string name="cancel">Annuler</string>

    <string name="dechetID">ID</string>
    <string name="dechetLatitude">Latitude</string>
    <string name="dechetLongitude">Longitude</string>
    <string name="dechetDescription">Description</string>

    <string name="dechetDescriptionNonDetaille">Non détaillée</string>


    // Camera Layout

    // Camera Activity
    <string name="imageSaved">Image sauvegardée à :\ </string>
    <string name="imageNotSavedError">Erreur lors de la sauvegarde de l\'image</string>
    <string name="flashNotAvailable">Flash non disponible</string>
    <string name="image_path">image_path</string>

    // HomePage Layout

    // HomePage Activity

    <string name="en_construction_homePage">Bienvenue chez Déching!\n Cette page est en construction.\n Elle contiendra les posts ajoutés depuis la page post.</string>

    // AddPost Layout

    // AddPost Activity

    <string name="en_construction_addPost">Bienvenue chez Déching!\n Cette page est en construction.\n Elle permettra l\'ajout des posts.</string>

    // Evenement Layout

    // Evenement Activity

    // CreateAccountActivity
    <string name="connexion_echoue">Connexion échouée. Veuillez vérifier vos identifiants.</string>
    <string name="nom">nom</string>
    <string name="prenom">prenom</string>
    <string name="mail">mail</string>
    <string name="username">username</string>
    <string name="userpassword">userPassword</string>
    <string name="erreurCreationCompte">Erreur lors de la création du compte. Veuillez réessayer.</string>


    <string name="erreurTraitementDonnees">Erreur de traitement des données</string>

    // profil layout
    <string name="posts">Posts</string>
    <string name="evenements">Événements</string>
    <string name="suivis">Suivis</string>

    <string name="descriptionVide">Description vide ! Ajoutez-en une !</string>

    <string name="boutonEditer">Editer le profil</string>
    <string name="boutonAjouter">Ajouter un ami</string>
    <string name="menu">À propos</string>
    <string name="credit">Crédits</string>

    <string name="creditValue">Cette application a été développée sur l\'année 2023-2024 au sein du département Informatique de l\'IUT de Bayonne et du Pays Basque par un groupe d\'étudiants en troisième année de BUT Informatique. Cette application a été développée sur un total de 36 jours / homme par \:
        \n \- DUJARDIN Esteban
        \n \- FALL Daro
        \n \- JOUVE Noé
        \n \- MONIMAUD Mike
        \n \- ROBERT Quentin
        \n
        \nCe projet a été commandité par l\'association Déching et avait pour enseignant-tuteur MARQUESUZAÀ Christophe.</string>

    <string name="versionApp">Version de l\'application</string>


    // Create Account Activity
    <string name="createAccount">Créer un compte</string>
    <string name="textCreateAccount">Complétez ces informations afin de vous créer un compte</string>
    <string name="error">Error</string>
    <string name="lastNameHint">Nom…</string>
    <string name="firstNameHint">Prénom…</string>
    <string name="emailHint">Adresse email…</string>
    <string name="usernameHint">Nom d\'utilisateur…</string>
    <string name="passwordHint">Mot de passe…</string>
    <string name="createMyAccount">Créer mon compte</string>

    // Main Activity
    <string name="connection">Connexion</string>
    <string name="textConnectAccount">Complétez ces informations afin de vous connecter à votre compte</string>
    <string name="connect">Se connecter</string>
</resources>