<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layoutDescription="@xml/activity_profil_utilisateur_scene"
    tools:context=".profilUtilisateur">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        tools:context=".MapActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButtonLogo"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_weight="0"
                android:background="@color/white"
                android:contentDescription="@string/logo_de_l_application"
                android:src="@android:drawable/btn_star" />

            <TextView
                android:id="@+id/textViewAppName"
                android:layout_width="wrap_content"
                android:layout_height="47dp"
                android:layout_weight="1"
                android:text="@string/nom_app"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:typeface="normal" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="68dp"
                        android:layout_weight="1"
                        android:src="@tools:sample/avatars" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <Space
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="TextView" />

                            <TextView
                                android:id="@+id/textView4"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="TextView" />

                        </LinearLayout>

                        <Space
                            android:layout_width="10dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textView5"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="TextView" />

                            <TextView
                                android:id="@+id/textView6"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="TextView" />

                        </LinearLayout>

                        <Space
                            android:layout_width="10dp"
                            android:layout_height="wrap_content" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textView7"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="TextView" />

                            <TextView
                                android:id="@+id/textView8"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="TextView" />
                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Lorem ipsum dolor sit amet. Aut explicabo perferendis et recusandae maxime quo nisi quas eos repellat perferendis. Nam odit animi aut aperiam consequuntur ut galisum maxime? Cum ipsum pariatur aut iure earum quo blanditiis impedit id Quis consequatur ab consequuntur molestiae in totam necessitatibus." />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/button4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Button" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/button5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Button" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </LinearLayout>

            </LinearLayout>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButtonHome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:contentDescription="@string/todo"
                android:src="@drawable/icons8_accueil_vide___" />

            <ImageButton
                android:id="@+id/imageButtonMap"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:contentDescription="@string/todo"
                android:src="@drawable/icons8_map_rempli___" />

            <ImageButton
                android:id="@+id/imageButtonAddPost"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:contentDescription="@string/todo"
                android:src="@drawable/icons8_add_new_vide___" />

            <ImageButton
                android:id="@+id/imageButtonEvent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:contentDescription="@string/todo"
                android:src="@drawable/icons8_month_vide___" />

            <ImageButton
                android:id="@+id/imageButtonProfile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:contentDescription="@string/todo"
                android:src="@drawable/icons8_account_vide___" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>